[tool.poetry]
name = "chariza"
version = "0.1.0"
description = ""
authors = ["Gabriel_Mendonca <gabba.script@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ignr = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
